# url-s_to_markdown

./: README.md  pyproject.toml  streamlit_app.py
src/url_s_to_markdown/: __init__.py  cli.py  documentation_mode.py  extractor.py  http_client.py  inputs.py  organization.py  pipeline.py  sitemap.py  writers.py
tests/: test_cli.py  test_documentation_mode.py  test_extractor.py  test_inputs.py  test_organization.py  test_pipeline.py  test_sitemap.py  test_streamlit_ui.py  test_writers.py
tests/fixtures/: sample_page.html  sitemap_sub_1.xml  sitemap_sub_2.xml  sitemap_urlset.xml
